# cpp_game

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  specifikace.md
src/: main.cpp
src/game/: StateManager.cpp  StateManager.h  entity.cpp  entity.h  game.cpp  game.h  input.cpp  input.h  player.cpp  player.h  window.cpp  window.h
src/game/ResourceManager/: Font.cpp  Font.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h  TextureManager.h
src/game/buffs/: Card.h
src/game/cards/: Card.cpp  Card.h
src/game/collisions/: BoundingBox.cpp  BoundingBox.h  Line.cpp  Line.h
src/game/enemies/: enemy.cpp  enemy.h
src/game/map/: map.cpp  map.h
src/game/projectiles/: projectile.cpp  projectile.h
src/game/scenes/: scene.h
src/game/scenes/card_scene/: card_scene.cpp  card_scene.h
src/game/scenes/main/: main_scene.cpp  main_scene.h
src/game/scenes/score/: score_scene.cpp  score_scene.h
src/game/utils/: Observer.cpp  Observer.h  utils.h
